# Filtylog

./: .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp
filters/artisticFilters/: cartoon.h  colorPencil.h  halftone.h
filters/simpleEffects/: cartoon.h  crossProcessing.h  sepia.h
filters/utils/: bilateralFilter.h  dilation.h  erosion.h  gaussianFilter.h  grayscale.h  medianCut.h  medianFilter.h  negative.h  otsuThreshold.h  quantization.h  robertEdgeDetection.h  sobelEdgeDetection.h  solarisation.h  threshold.h
include/artisticFilters/: cartoon.hh  colorPencil.hh  crossHatch.hh  dither.hh  halftone.hh  morphe.hh  oilPainting.hh  solarisation.hh  styleTransfer.hh  vintage.hh
include/utils/: bilateralFilter.hh  convolution.hh  dilation.hh  erosion.hh  gaussianFilter.hh  grayscale.hh  histogram.hh  medianCut.hh  medianFilter.hh  negative.hh  noise.hh  otsuThreshold.hh  quantization.hh  robertEdgeDetection.hh  sepia.hh  sharpen.hh  sobelEdgeDetection.hh  vignette.hh
src/: CMakeLists.txt
src/artisticFilters/: cartoon.cc  colorPencil.cc  crossHatch.cc  dither.cc  halftone.cc  morphe.cc  oilPainting.cc  solarisation.cc  styleTransfer.cc  vintage.cc
src/utils/: bilateralFilter.cc  convolution.cc  dilation.cc  erosion.cc  gaussianFilter.cc  grayscale.cc  histogram.cc  medianCut.cc  medianFilter.cc  negative.cc  noise.cc  otsuThreshold.cc  quantization.cc  robertEdgeDetection.cc  sepia.cc  sharpen.cc  sobelEdgeDetection.cc  vignette.cc
